--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Node.js sample app for OpenShift 3",
   "main": "server.js",
+  "bin": {
+    "jsforce": "./bin/jsforce"
+  }
   "dependencies": {
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
@@ -11,7 +14,22 @@
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
     "morgan": "^1.7.0",
-    "object-assign":"4.1.0"
+    "object-assign":"4.1.0",
+    "base64-url": "^2.2.0",
+    "co-prompt": "^1.0.0",
+    "coffeescript": "^1.10.0",
+    "commander": "^2.9.0",
+    "csv-parse": "^1.1.1",
+    "csv-stringify": "^1.0.4",
+    "faye": "^1.2.0",
+    "inherits": "^2.0.1",
+    "lodash": "^4.11.1",
+    "multistream": "^2.0.5",
+    "opn": "^5.3.0",
+    "promise": "^7.1.1",
+    "readable-stream": "^2.1.0",
+    "request": "^2.72.0",
+    "xml2js": "^0.4.16"
   },
   "engine": {
     "node": "*",
