--- a/package.json
+++ b/package.json
@@ -36,24 +36,15 @@
     "npm": "*"
   },
   "scripts": {
-    "build": "gulp build",
-    "build:test": "gulp build:test",
-    "build:all": "gulp build:all",
-    "doc": "jsdoc lib -d doc --recurse --lenient",
-    "test": "npm run test:node",
-    "test:all": "npm run test:node && npm run test:browser",
-    "test:node": "mocha --retries 2 --reporter spec --require intelli-espower-loader --exit",
-    "test:browser": "testem",
-    "prepublish": "node -e \"if(process.env.npm_package_version!==require('./lib/VERSION')){console.error('The pacakge.json version is not matching to ./lib/VERSION.js');process.exit(1)}\""
-    //"start": "node server.js",
-    //"test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js"
+    "start": "node server.js",
+    "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js"
   },
   "repository": {
     "type": "git",
     "url": "http://github.com/sclorg/nodejs-ex.git"
   },
-  "author": "Steve Speicher <sspeiche@gmail.com>",
-  "license": "CC-BY-1.0",
+  "author": "Ankur <ankur.sforceconsultant@gmail.com>",
+  "license": "Auroville-1.0",
   "bugs": {
     "url": "http://github.com/sclorg/nodejs-ex/issues"
   },
